Update teminal commands

--- a/Web_courses/appsettings.json
+++ b/Web_courses/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "coursesContext": "Data Source=coursesContext-832bfd1a-d70c-477b-a1bd-a9740c1b6512.db"
+  }
 }
